<?xml version="1.0"?>
<package format="2">
  <name>imcoders_diff_odom</name>
  <version>0.0.1</version>
  <description>The imcoders_diff_odom package</description>

  <maintainer email="alfonso.troya@gmail.com">Alfonso Troya</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <build_depend>tf</build_depend>
</package>
