<?xml version="1.0"?>
<package>
  <name>imcoders_reader</name>
  <version>0.0.0</version>
  <description>The imcoders_reader package</description>

  <maintainer email="alfonso.troya@gmail.com">Alfonso Troya</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>angles</build_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>angles</run_depend>
  <run_depend>timed_roslaunch</run_depend>

</package>
