<?xml version="1.0"?>
<package format="2">
  <name>imcoders_rviz_launchers</name>
  <version>0.0.1</version>
  <description>The imcoders_rviz_launchers package</description>
  <maintainer email="alfonso.troya@gmail.com">Alfonso Troya</maintainer>
  <author email="alfonso.troya@gmail.com">Alfonso Troya</author>
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>rviz</exec_depend>
  <exec_depend>imcoders_description</exec_depend>
  <exec_depend>imu_filters</exec_depend>
</package>
